[package]
name = "mdlynx"
version = "0.1.0"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
keywords = ["broken-link", "cli", "markdown"]
edition = "2021"
description = "Small, fast utility to find broken file links in Markdown documents"
license = "MIT"
homepage = "https://github.com/langston-barrett/mdlynx"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
rayon = { version = "1", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[profile.release]
lto = true
