[package]
name = "mdlynx"
version = "0.3.0"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
keywords = ["broken-link", "cli", "markdown"]
edition = "2021"
description = "Small, fast utility to find broken file links in Markdown documents"
license = "MIT"
homepage = "https://github.com/langston-barrett/mdlynx"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"
